--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-<style type="text/css" media="screen">
+<!--<style type="text/css" media="screen">
   .container {
     margin: 10px auto;
     max-width: 600px;
@@ -21,4 +21,18 @@ layout: base
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
-</div>
+</div>-->
+
+
+<div id="p404"></div>
+
+
+
+<style>
+#p404 {
+    background: url("../assets/image/404.jpg") no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+</style>
