--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@ layout: base
 
 <style>
 #p404 {
-    background: url("../assets/image/404.jpg") no-repeat;
+    background: url(/assets/image/404.jpg) no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
