--- a/tag.html
+++ b/tag.html
@@ -1,9 +1,9 @@
 ---
-layout: base1
+layout: base
 permalink: /tag/
 ---
 
-{% include header1.html title="tag xxxxxxxxxxxxx" description="tag yyyyyyy" %}
+{% include header.html title="tag xxxxxxxxxxxxx" description="tag yyyyyyy" %}
 
 <h1> {{ page.url }} </h1>
 
@@ -16,4 +16,4 @@ permalink: /tag/
     <h1>test tag</h1>
 </div>
 
-{%- include footer1.html -%}
+{%- include footer.html -%}
