--- a/tag.html
+++ b/tag.html
@@ -3,7 +3,7 @@ layout: base
 permalink: /tag/
 ---
 
-{% include header.html title="tag {{ page.url }} " description="tag yyyyyyy" %}
+{% include header.html title="tag xxxxxxxxxxxxx" description="tag yyyyyyy" %}
 
 <h1> {{ page.url }} </h1>
 
