--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ---
 layout: base
+title: this is 404 page
 ---
 
 <!--<style type="text/css" media="screen">
@@ -25,8 +26,6 @@ layout: base
 
 
 <div id="p404"></div>
-
-{{content}}
 
 <style>
 #p404 {
