--- a/tag.html
+++ b/tag.html
@@ -1,5 +1,6 @@
 ---
 layout: base
+title: this is a demo
 ---
 
 {% include header.html title="tag xxxxxxxxxxxxx" description="tag yyyyyyy" %}
@@ -11,7 +12,5 @@ layout: base
     <h1>test tag</h1>
     <h1>test tag</h1>
 </div>
-
-{{content}}
 
 {%- include footer.html -%}
