--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@ title: 404 page
 permalink: /404
 ---
 
-<div id="p404"></div>
+<div id="p404">
+    <h1> Page Not Found.</h1>
+</div>
 
 <style>
 #p404 {
@@ -12,5 +14,6 @@ permalink: /404
     background-size: cover;
     width: 100%;
     height: 100%;
+    margin: auto 0;
 }
 </style>
