--- a/404.html
+++ b/404.html
@@ -14,6 +14,8 @@ permalink: /404
     background-size: cover;
     width: 100%;
     height: 100%;
-    margin: auto 0;
+    margin: 0 auto;
+    padding-top: 45%;
+    color: white;
 }
 </style>
