--- a/404.html
+++ b/404.html
@@ -4,8 +4,7 @@ title: 404 page
 permalink: /404
 ---
 
-<div id="p404">
-    <h1> Page Not Found.</h1>
+<div id="p404">Page Not Found.
 </div>
 
 <style>
@@ -15,7 +14,7 @@ permalink: /404
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    padding-top: 45%;
+    margin-top: 45%;
     color: white;
 }
 </style>
