--- a/404.html
+++ b/404.html
@@ -4,7 +4,8 @@ title: 404 page
 permalink: /404
 ---
 
-<div id="p404">Page Not Found.
+<div id="p404">
+    <h1 style="margin-top: 45vh; color: white;">Page Not Found.</h1>
 </div>
 
 <style>
@@ -14,7 +15,5 @@ permalink: /404
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    margin-top: 45%;
-    color: white;
 }
 </style>
