--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@ permalink: /404
     background: url(/assets/image/404.jpg) no-repeat;
     background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 55vh;
     margin: 0 auto;
 }
 </style>
