--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404
 ---
 
 <div id="p404">
-    <h1 style="margin-top: 45vh; color: white;">Page Not Found.</h1>
+    <h1>Page Not Found.</h1>
 </div>
 
 <style>
@@ -13,7 +13,8 @@ permalink: /404
     background: url(/assets/image/404.jpg) no-repeat;
     background-size: cover;
     width: 100%;
-    height: 55vh;
+    height: 100%;
     margin: 0 auto;
+    color: white;
 }
 </style>
