--- a/404.html
+++ b/404.html
@@ -4,9 +4,7 @@ title: 404
 permalink: /404
 ---
 
-<div id="p404">
-    <h1>Page Not Found.</h1>
-</div>
+<div id="p404">Page Not Found.</div>
 
 <style>
 #p404 {
@@ -14,7 +12,7 @@ permalink: /404
     background-size: cover;
     width: 100%;
     height: 100%;
-    margin: 0 auto;
+    text-align: center;
     color: white;
 }
 </style>
