--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ permalink: /404
 
 <style>
 #p404 {
-    background: url(/assets/image/404.jpg) no-repeat;
+    background: url(/assets/image/not_found.jpeg) no-repeat;
     background-size: cover;
     width: 100%;
     height: 100%;
