--- a/tags.html
+++ b/tags.html
@@ -162,8 +162,8 @@ chart.on('click', { seriesIndex: 0 }, function(params) {
 
 <!--<link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css' />
 <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>-->
-<link rel="stylesheet" href="assets/css/APlayer.min.css" />
-<script src="assets/css/APlayer.min.js"></script>
+<link rel="stylesheet" href="/assets/css/APlayer.min.css" />
+<script src="/assets/css/APlayer.min.js"></script>
 
 <script>
     var meting_api = 'https://meting.xdevil.top/api?server=:server&type=:type&id=:id&auth=:auth&r=:r';
@@ -171,7 +171,7 @@ chart.on('click', { seriesIndex: 0 }, function(params) {
 <!--老版本包不能用了，要用新包
 <script src="https://unpkg.com/@xizeyoupan/meting@latest/dist/Meting.min.js"></script>
 -->
-<script src="assets/css/Meting.min.js"></script>
+<script src="/assets/css/Meting.min.js"></script>
 
 <style>
 #music {
