deploy: Portgas-D-Asce/Note@c87486b1912cabb037a153b8db435dd07624f361

--- a/about.html
+++ b/about.html
@@ -131,6 +131,7 @@
     text-align: center;
 }
 </style>
+<!--
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.5.1/build/styles/github.min.css"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 <script>hljs.highlightAll();</script>
@@ -139,6 +140,17 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
     onload="renderMathInElement(document.body);">
+</script>
+-->
+
+<link rel="stylesheet" href="/assets/css/github.min.css"/>
+<script src="/assets/css/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
+
+<link rel="stylesheet" href="/assets/css/katex.min.css">
+<script defer src="/assets/css/katex.min.js"></script>
+<script defer src="/assets/css/auto-render.min.js"
+        onload="renderMathInElement(document.body);">
 </script>
 
 <script>
