deploy: Portgas-D-Asce/Note@ca4affb27136bbce1971c9fd3f77db1a4ed9117a

--- a/tags.html
+++ b/tags.html
@@ -112,6 +112,11 @@ const tags_data = [
     {
         name: 'kanzi',
         value: 1
+    },
+    
+    {
+        name: '树',
+        value: 1
     }
     
 ];
