--- a/about.html
+++ b/about.html
@@ -180,6 +180,7 @@
     #article {
         margin: 0 auto;
         width: 94vw;
+        overflow-x: hidden;
     }
 }
 
@@ -188,6 +189,7 @@
     #article {
         margin: 0 auto;
         width: 61.8vw;
+        overflow-x: hidden;
     }
 }
 
@@ -196,6 +198,7 @@
     #article {
         margin: 0 auto;
         width: 61.8vw;
+        overflow-x: hidden;
     }
 }
 
