--- a/about.html
+++ b/about.html
@@ -180,7 +180,6 @@
     #article {
         margin: 0 auto;
         width: 94vw;
-        overflow-x: hidden;
     }
 }
 
@@ -189,7 +188,6 @@
     #article {
         margin: 0 auto;
         width: 61.8vw;
-        overflow-x: hidden;
     }
 }
 
@@ -198,7 +196,6 @@
     #article {
         margin: 0 auto;
         width: 61.8vw;
-        overflow-x: hidden;
     }
 }
 
@@ -283,6 +280,10 @@ h6:before {
     vertical-align: inherit;
     font-weight: inherit;
     line-height: inherit;
+}
+
+#article .katex-display {
+    overflow-x: scroll;
 }
 </style>
 <div id="music">
