--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
     .mobile_hidden {
         display: none;
     }
+
+    .motto {
+        padding: 30vh 5vw 0 5vw;
+        width: 90%;
+    }
 }
 
 .destory {
