--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </style>
     
         <div class="container wh100">
-    <div class="motto color-white fontsz28">
-        <p>错的不是我，是这个世界</p>
+    <div class="motto color-white fontsz24">
+        <p class="mobile_hidden">错的不是我，是这个世界</p>
         <p class="mobile_hidden">没有光明不幸吗？需要光明才是真正的不幸</p>
         <p class="mobile_hidden">一切不幸都是由自身能力不足造成的, 我再也不想当那个无能为力的自己了 ......</p>
         <br><br><br><br>
@@ -75,8 +75,8 @@
     }
 
     .motto {
-        padding: 30vh 5vw 0 5vw;
-        width: 90%;
+        padding: 30vh 0vw 0 0vw;
+        width: 100%;
     }
 }
 
