--- a/index.html
+++ b/index.html
@@ -63,11 +63,6 @@
     background-size: cover;
 }
 
-.motto {
-    padding: 30vh 5vw 0 5vw;
-    width: 50%;
-}
-
 /* 手机设备 (通常 < 768px) */
 @media (max-width: 767px) {
     .mobile_hidden {
@@ -75,8 +70,24 @@
     }
 
     .motto {
-        padding: 30vh 0vw 0 0vw;
+        padding: 50vh 0vw 0 0vw;
         width: 100%;
+    }
+}
+
+/* 平板设备 (通常 768px - 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .motto {
+        padding: 30vh 5vw 0 5vw;
+        width: 50%;
+    }
+}
+
+/* 电脑设备 (通常 > 1024px) */
+@media (min-width: 1025px) {
+    .motto {
+        padding: 30vh 5vw 0 5vw;
+        width: 50%;
     }
 }
 
